2005-12-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/filter_design_test.ref, tests/poly_test.ref: added missing
	reference files
	* tests/filter_design_test.cpp: not used `NO_LAPACK' and
	`NO_CBLAS' definitions replaced with `HAVE_LAPACK' and `HAVE_CBLAS'
	* doc/Makefile.am: updated with new files

2005-12-12  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/matfunc.h: Added functions is_hermitian() and is_unitary()
	contributed by M. Szalay.

2005-12-07  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/poly.{h,cpp}: new files added with support
	for polynomials. For now poly(), polyval(), and roots().
	* itpp/base/filter_design.{h,cpp}: new files added with support
	for filter design. For now only polystab() and freqz().
	* itpp/itbase.h: updated includes with new files.
	* itpp/base/Makefile.am: updated with new files.
	* itpp/tests/{poly_test.cpp,filter_design_test.cpp}: new test files.
	* itpp/tests/Makefile.am: updated with new files

2005-12-07  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/matfunc.{h,cpp}: diag() now takes a second argument stating
	which diagonal to fill with values (matlab compatible).

2005-12-07  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/protocol/{events.h,signals_slots.h}: Documentation updates.

2005-11-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itfile.cpp: Fixed bug [1333897]. The problem with
	infinite loop in `it_file::seek(...)' function has been solved by
	fixing `it_file::write_data_header(...)' function. See the bug
	report for more details. Thanks to Bjorn Furugard (luminosity) for
	having reported this problem and solution for it.

2005-11-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.{h,cpp}: Added `namespace itpp'. Fixed improper
	way of including header files. File comments addapted to the IT++
	standard.
	* itpp/itbase.h: Included `gf2mat.h'.