@@ -479,8 +479,9 @@ RECURSIVE              = NO
 # excluded from the INPUT source files. This way you can easily exclude a 
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE                = @top_srcdir@/@PACKAGE@/base/fftw3.h \
-                         @top_srcdir@/@PACKAGE@/base/cblas.h
+EXCLUDE                = @top_srcdir@/@PACKAGE@/config.h \
+                         @top_srcdir@/@PACKAGE@/base/cblas.h \
+                         @top_srcdir@/@PACKAGE@/base/fftw3.h
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or 
 # directories that are symbolic links (a Unix filesystem feature) are excluded 
